--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bio Research Laboratory</title>
+    <title>Bio Research Laboratory- About Us</title>
     <!-- Include FontAwesome for icons -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
@@ -26,91 +26,14 @@
         </div>
     </header>
 
-
-    <section class="hero">
-        <div class="container">
-            <div class="hero-text">
-                <h2>Welcome to</h2>
-                <h1>Bio Research <br> Laboratory</h1>
-                <p>At Bio Research Laboratory, we are <br> dedicated to advancing the frontiers of biological <br> research.</p>
-                <a href="#" class="btn">Learn More</a>
-            </div>
-            <div class="hero-image">
-                <img src="./images/20250115_100329.png" alt="Image">
-            </div>
+    <section class="breadcrumb-nav">
+        <!-- Breadcrumb Section -->
+        <div class="breadcrumb-content">
+          <p><a href="index.html">Home</a> > About</p>
+          <h1 class="breadcrumb-title">About</h1>
         </div>
-    </section>
-
-    <!-- Mission Section -->
-    <section class="mission">
-        <div class="container">
-            <div class="mission-text">
-                <h1>Our Mission</h1>
-                <p>Our mission is to conduct cutting-edge <br> research that transforms our <br> understanding of biological systems and <br> improves human health, environmental <br> sustainability, and economic <br> development.</p>
-                <a href="#" class="btn">Learn More</a>
-            </div>
-            <div class="mission-image">
-                <img src="./images/20250115_100417.png" alt="Image">
-            </div>
-        </div>
-    </section>
-    
-    <!-- Sercvices section -->
-    <section class="services-section">
-        <div class="container">
-            <div class="sheader">
-                <h2 class="services-section-title">Our Services</h2>
-                <p class="section-description">
-                    Explore our comprehensive range of bio-research services designed to support innovation and discovery in the life sciences.
-                </p>
-            </div>
-            <div class="content">
-                <div class="services-list">
-                    <ul>
-                        <li><i class="fas fa-check"></i> State-of-the-art laboratory facilities</li>
-                        <li><i class="fas fa-check"></i> Expertise in genomics and proteomics</li>
-                        <li><i class="fas fa-check"></i> Collaborative research opportunities</li>
-                        <li><i class="fas fa-check"></i> Data analysis and visualization support</li>
-                        <li><i class="fas fa-check"></i> Ethical and sustainable research practices</li>
-                        <li><i class="fas fa-check"></i> Tailored solutions for your research needs</li>
-                    </ul>
-                    <button class="btn-primary">Explore All Services</button>
-                </div>
-                <div class="services-cards">
-                    <div class="card">
-                        <i class="fas fa-dna"></i>
-                        <h3>Genomics</h3>
-                        <p>Cutting-edge sequencing and data analysis to unlock the mysteries of genetic material.</p>
-                    </div>
-                    <div class="card">
-                        <i class="fas fa-flask"></i>
-                        <h3>Proteomics</h3>
-                        <p>Advanced protein analysis to understand cellular functions and processes.</p>
-                    </div>
-                    <div class="card">
-                        <i class="fas fa-chart-line"></i>
-                        <h3>Data Analysis</h3>
-                        <p>Comprehensive bioinformatics tools to interpret and visualize complex biological data.</p>
-                    </div>
-                    <div class="card">
-                        <i class="fas fa-users"></i>
-                        <h3>Collaboration</h3>
-                        <p>Opportunities for joint research and knowledge sharing in the scientific community.</p>
-                    </div>
-                    <div class="card">
-                        <i class="fas fa-leaf"></i>
-                        <h3>Sustainability</h3>
-                        <p>Commitment to environmentally responsible and ethical research practices.</p>
-                    </div>
-                    <div class="card">
-                        <i class="fas fa-brain"></i>
-                        <h3>Neuroscience</h3>
-                        <p>Innovative approaches to studying the complexities of the human brain.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+        <p class="breadcrumb-p">We can assist you in developing and implementing a focused <br> and strategic research plan, aligned with your laboratory's goals and <br>advancing cutting-edge discoveries in the field of biological sciences.</p>
+      </section>
 
     <!-- Why Choose Us Section -->
 <section class="why-choose-us">
