--- a/pricing.html
+++ b/pricing.html
@@ -32,9 +32,8 @@
           <p><a href="index.html">Home</a> > Pricing</p>
           <h1 class="breadcrumb-title">Pricing</h1>
         </div>
+        <p>No Pricing yet</p>
       </section>
-
-   
 
     <!-- Footer Section -->
     <footer class="footer">
