--- a/about.html
+++ b/about.html
@@ -12,7 +12,9 @@
     <header class="header">
         <div class="container">
             <div class="logo">
-                <img src="./images/logo.png" alt="Bio Research Logo">
+                <a href="index.html">
+                    <img src="./images/logo.png" alt="Bio Research Logo">
+                </a>
             </div>
             <nav class="nav">
                 <ul>
@@ -20,6 +22,7 @@
                     <li><a href="about.html">About</a></li>
                     <li><a href="pricing.html">Pricing</a></li>
                     <li><a href="services.html">Services</a></li>
+                    <li><a href="products.html">Products</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
