--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <header class="header">
         <div class="container">
             <div class="logo">
-                <img src="./images/logo.png" alt="Bio Research Logo">
+                <a href="index.html">
+                    <img src="./images/logo.png" alt="Bio Research Logo">
+                </a>
             </div>
             <nav class="nav">
                 <ul>
@@ -20,6 +22,7 @@
                     <li><a href="about.html">About</a></li>
                     <li><a href="pricing.html">Pricing</a></li>
                     <li><a href="services.html">Services</a></li>
+                    <li><a href="products.html">Products</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
@@ -165,6 +168,57 @@
         </div>
     </div>
 </section>
+
+<section class="research-focus">
+    <div class="bio-lab-container">
+      <h2 class="section-heading">Our Products</h2>
+      <p class="section-subtitle">Pioneering solutions in bio-research for scientific advancement.</p>
+      <div class="product-grid">
+        <div class="product-card">
+          <img src="./images/images (10) (1).jpeg" alt="DNA Sequencer" class="product-image">
+          <h3 class="product-name">DNA Sequencer</h3>
+          <p class="product-description">
+            State-of-the-art sequencing technology for decoding genetic material with precision.
+          </p>
+        </div>
+        <div class="product-card">
+          <img src="./images/download (2) (1).jpeg" alt="Protein Analyzer" class="product-image">
+          <h3 class="product-name">Protein Analyzer</h3>
+          <p class="product-description">
+            Advanced tools for detailed analysis of protein structures and functions.
+          </p>
+        </div>
+        <div class="product-card">
+          <img src="./images/Bio informatics.jpeg" alt="Bioinformatics Software" class="product-image">
+          <h3 class="product-name">Bioinformatics Software</h3>
+          <p class="product-description">
+            Comprehensive software solutions for analyzing and visualizing biological data.
+          </p>
+        </div>
+        <div class="product-card">
+          <img src="./images/Cell biology.jpeg" alt="Cell Imaging System" class="product-image">
+          <h3 class="product-name">Cell Imaging System</h3>
+          <p class="product-description">
+            High-resolution imaging tools for studying cellular structures and processes.
+          </p>
+        </div>
+        <div class="product-card">
+          <img src="./images/download (1).jpeg" alt="Lab Automation Tools" class="product-image">
+          <h3 class="product-name">Lab Automation Tools</h3>
+          <p class="product-description">
+            Robotic systems and devices to streamline laboratory workflows efficiently.
+          </p>
+        </div>
+        <div class="product-card">
+          <img src="./images/images (10) (2).jpeg" alt="Environmental Monitor" class="product-image">
+          <h3 class="product-name">Environmental Monitor</h3>
+          <p class="product-description">
+            Innovative tools to ensure sustainable and eco-friendly research environments.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>  
 
     <!-- Footer Section -->
     <footer class="footer">
