--- a/index.html
+++ b/index.html
@@ -11,27 +11,35 @@
 <body>
     <header class="header">
         <div class="container">
-            <div class="logo">
-                <a href="index.html">
-                    <img src="./images/logo.png" alt="Bio Research Logo">
-                </a>
+          <div class="logo">
+            <a href="index.html">
+              <img src="./images/logo.png" alt="Bio Research Logo">
+            </a>
+          </div>
+          <nav class="nav">
+            <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
             </div>
-            <nav class="nav">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="pricing.html">Pricing</a></li>
-                    <li><a href="services.html">Services</a></li>
-                    <li><a href="products.html">Products</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </nav>
+            <ul class="nav-links">
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="pricing.html">Pricing</a></li>
+              <li><a href="services.html">Services</a></li>
+              <li><a href="products.html">Products</a></li>
+              <li><a href="contact.html">Contact</a></li>
+            </ul>
+          </nav>
+          <div class="close-icon">&times;</div>
         </div>
-    </header>
+        </div>
+      </header>
+
 
 
     <section class="hero">
-        <div class="container">
+        <div class="container1">
             <div class="hero-text">
                 <h2>Welcome to</h2>
                 <h1>Bio Research <br> Laboratory</h1>
@@ -46,7 +54,7 @@
 
     <!-- Mission Section -->
     <section class="mission">
-        <div class="container">
+        <div class="container1">
             <div class="mission-text">
                 <h1>Our Mission</h1>
                 <p>Our mission is to conduct cutting-edge <br> research that transforms our <br> understanding of biological systems and <br> improves human health, environmental <br> sustainability, and economic <br> development.</p>
@@ -262,5 +270,6 @@
             &copy; 2025 Bio Research Hub. All Rights Reserved.
         </div>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
