--- a/about.html
+++ b/about.html
@@ -11,29 +11,36 @@
 <body>
     <header class="header">
         <div class="container">
-            <div class="logo">
-                <a href="index.html">
-                    <img src="./images/logo.png" alt="Bio Research Logo">
-                </a>
+          <div class="logo">
+            <a href="index.html">
+              <img src="./images/logo.png" alt="Bio Research Logo">
+            </a>
+          </div>
+          <nav class="nav">
+            <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
             </div>
-            <nav class="nav">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="pricing.html">Pricing</a></li>
-                    <li><a href="services.html">Services</a></li>
-                    <li><a href="products.html">Products</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </nav>
+            <ul class="nav-links">
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="pricing.html">Pricing</a></li>
+              <li><a href="services.html">Services</a></li>
+              <li><a href="products.html">Products</a></li>
+              <li><a href="contact.html">Contact</a></li>
+            </ul>
+          </nav>
+          <div class="close-icon">&times;</div>
         </div>
-    </header>
+        </div>
+      </header>
 
     <section class="breadcrumb-nav">
         <!-- Breadcrumb Section -->
         <div class="breadcrumb-content">
           <p><a href="index.html">Home</a> > About</p>
-          <h1 class="breadcrumb-title">About</h1>
+          <h1 class="breadcrumb-title">About us</h1>
         </div>
         <p class="breadcrumb-p">We can assist you in developing and implementing a focused <br> and strategic research plan, aligned with your laboratory's goals and <br>advancing cutting-edge discoveries in the field of biological sciences.</p>
       </section>
@@ -197,5 +204,6 @@
             &copy; 2025 Bio Research Hub. All Rights Reserved.
         </div>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
