--- a/pricing.html
+++ b/pricing.html
@@ -11,23 +11,31 @@
 <body>
     <header class="header">
         <div class="container">
-            <div class="logo">
-                <a href="index.html">
-                    <img src="./images/logo.png" alt="Bio Research Logo">
-                </a>
+          <div class="logo">
+            <a href="index.html">
+              <img src="./images/logo.png" alt="Bio Research Logo">
+            </a>
+          </div>
+          <nav class="nav">
+            <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
             </div>
-            <nav class="nav">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="pricing.html">Pricing</a></li>
-                    <li><a href="services.html">Services</a></li>
-                    <li><a href="products.html">Products</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </nav>
+            <ul class="nav-links">
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="pricing.html">Pricing</a></li>
+              <li><a href="services.html">Services</a></li>
+              <li><a href="products.html">Products</a></li>
+              <li><a href="contact.html">Contact</a></li>
+            </ul>
+          </nav>
+          <div class="close-icon">&times;</div>
         </div>
-    </header>
+        </div>
+      </header>
+
 
     <section class="breadcrumb-nav">
         <!-- Breadcrumb Section -->
@@ -80,5 +88,6 @@
             &copy; 2025 Bio Research Hub. All Rights Reserved.
         </div>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
