full responsiveness done

--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
           <!-- Contact Information -->
           <div class="contact-info">
             <div>
-            <h2 class="contact-header">Contact <br> Information</h2>
+            <h2 class="contact-header">Contact Information</h2>
             <p class="contact-subtext">
               Get in touch with us. We'd like to hear <br> from you!
             </p>
@@ -144,11 +144,11 @@
             <div class="footer-links">
                 <h4>Quick Links</h4>
                 <ul>
-                    <li><a href="about">About</a></li>
-                    <li><a href="pricing">Pricing</a></li>
-                    <li><a href="services">Services</a></li>
-                    <li><a href="contact">Contact</a></li>
-                </ul>
+                  <li><a href="about.html">About</a></li>
+                  <li><a href="products.html">Products</a></li>
+                  <li><a href="services.html">Services</a></li>
+                  <li><a href="contact.html">Contact</a></li>
+              </ul>
             </div>
             <!-- Footer Contact -->
             <div class="footer-contact">
